@@ -1,5 +1,9 @@
 0.1.9
 
+2016-04-10  Brecht Sanders  https://github.com/brechtsanders/
+
+  * added xlsxio_csv2xlsx command line utility
+
 0.1.8
 
 2016-04-07  Brecht Sanders  https://github.com/brechtsanders/
